--- a/TD3/environment.yml
+++ b/TD3/environment.yml
@@ -43,6 +43,7 @@ dependencies:
     - mouseinfo==0.1.3
     - mujoco-py==2.0.2.13
     - numpy==1.21.4
+    - patchelf==0.15.0.0
     - pathtools==0.1.2
     - pillow==8.4.0
     - progress==1.6
